Add information to getUsers
